sbin_PROGRAMS = blsched
blsched_SOURCES = src/blsched.c

docdir = $(datadir)/doc/@PACKAGE@
doc_DATA = AUTHORS COPYING NEWS README.md

MAINTAINERCLEANFILES = Makefile.in \
	aclocal.m4 configure config.h.in config.sub config.guess \
	ltmain.sh depcomp compile missing install-sh mkinstalldirs test-driver
